# judge-protocol

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
docs/: PACKET.md
src/: constants.rs  handshake.rs  judge.rs  lib.rs  packet.rs  security.rs
