[package]
name = "judge-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1"
serde = { version="1", features = ["derive"] }
bincode = "1.3.3"
md-5 = "0.10.5"
k256 = { version = "0.11.5", features = ["default", "ecdh", "serde"] }
async-std = "1.12.0"