[package]
name = "judge-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1"
serde = { version="1", features = ["derive"] }
bincode = "1.3.3"
md-5 = "0.10.5"
k256 = { version = "0.11.5", features = ["default", "ecdh", "serde"] }
async-std = "1.12.0"
chacha20poly1305 = { version = "0.10.1", features = ["reduced-round"] }
generic-array = { version = "0.14", default-features = false }
sha3 = "0.10.5"
rand = "0.8.5"

[dependencies.uuid]
version = "1.1.2"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]